# dripz

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
docs/: anti-mev.md  anti-snipe.md  architecture.md  curves.md  security.md
dripz-cli-demo/: Cargo.toml
dripz-cli-demo/src/: backtest.rs  main.rs  simulator.rs
dripz-curves/: Cargo.toml
dripz-curves/src/: common.rs  dutch.rs  error.rs  exponential.rs  fair.rs  lib.rs  linear.rs  step.rs
dripz-engine/: Cargo.toml
dripz-engine/src/: error.rs  lib.rs  math.rs  state.rs
dripz-snipeguard/: Cargo.toml
dripz-snipeguard/src/: commit_reveal.rs  error.rs  lib.rs  max_buy.rs  rolling_window.rs
sdk-demo/: package-lock.json  package.json  tsconfig.json
sdk-demo/src/: curves.test.ts  index.ts  simulator.test.ts  simulator.ts  spot-price.ts  types.ts
sdk-demo/src/curves/: dutch.ts  exponential.ts  fair.ts  linear.ts  step.ts
