[workspace]
resolver = "2"
members = [
    "dripz-curves",
    "dripz-snipeguard",
    "dripz-engine",
    "dripz-cli-demo",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["dripz-labs"]
repository = "https://github.com/dripz-labs/dripz"
homepage = "https://dripz.fi"
description = "Solana time-weighted LBP framework. Drop by drop."

[workspace.dependencies]
anyhow = "1.0"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rust_decimal = "1.34"
rust_decimal_macros = "1.34"
clap = { version = "4.5", features = ["derive"] }
hex = "0.4"
sha2 = "0.10"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
panic = "abort"
strip = "symbols"
